Correction cvc-mirror width overflow

--- a/Semana 3/style.css
+++ b/Semana 3/style.css
@@ -215,8 +215,9 @@ button {
         border-radius: 10px;
     }
     & #cvc-mirror {
+        width: fit-content;
         position: relative;
-        transform: translateX(80%) translateY(110px);
+        transform: translateX(360px) translateY(110px);
     }
 }
 
